# Testing-Deploy-On-AWS

./: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
Utils/: RespnseMessage.py  checkauth.py  serializerData.py  unauthorizationSend.py
authentication/: models.py  restpassword.py  serializers.py  tasks.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/tests/: factories.py  fixtures.py  test_login.py  test_register.py
docker/mysql/: Dockerfile  init_db.sh
docker/rabbitmq/: Dockerfile  init.sh
nginx/: default.conf
projects/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_projects_approved_and_more.py
server/: celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_emailconfirm.py  0003_alter_emailconfirm_table.py  0004_delete_emailconfirm.py  0005_users_slug.py  0006_remove_users_slug.py
users/tests/: test_view.py
